--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "dependencies": {
     "into-stream": "^3.1.0",
     "joi": "^8.0.3",
-    "lodash": "^4.5.1"
+    "lodash": "^4.5.1",
+    "stream-to-array": "^2.3.0",
+    "unique-stream": "^2.2.1"
   }
 }
