--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "extends": [
     "eslint:recommended",
     "airbnb-base",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:jsdoc/recommended",
   ],
   "parserOptions": {
     "ecmaVersion": 6
