--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsdoc": "^15.8.0",
     "eslint-plugin-prettier": "^3.0.1",
     "istanbul": "^0.4.2",
     "mocha": "^5.2.0",
