--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint .",
-    "test": "./node_modules/.bin/istanbul cover --print both ./node_modules/mocha/bin/_mocha -- -R spec ./test/**/*.js",
+    "test": "./node_modules/.bin/nyc --reporter=lcov --reporter=text --reporter=text-summary ./node_modules/mocha/bin/_mocha -R spec ./test/**/*.js",
     "coveralls": "cat ./coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js",
     "bench": "node benchmark/index.js"
   },
@@ -20,21 +20,21 @@
   "repository": "danivek/json-api-serializer",
   "license": "MIT",
   "engines": {
-    "node": ">= 4.0.0"
+    "node": ">= 8.0.0"
   },
   "devDependencies": {
     "benchmark": "^2.1.4",
     "bson-objectid": "^1.1.4",
     "chai": "^4.1.2",
     "coveralls": "^3.0.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^4.2.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsdoc": "^15.8.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsdoc": "^15.9.2",
     "eslint-plugin-prettier": "^3.0.1",
-    "istanbul": "^0.4.2",
     "mocha": "^5.2.0",
+    "nyc": "^14.1.1",
     "prettier": "^1.17.0"
   },
   "dependencies": {
