--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "2.4.2",
   "description": "Framework agnostic JSON API serializer.",
   "main": "index.js",
-  "module": "dist/json-api-serializer.esm.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint .",
     "test": "./node_modules/.bin/nyc --reporter=lcov --reporter=text --reporter=text-summary ./node_modules/mocha/bin/_mocha -R spec ./test/**/*.js",
-    "build": "./node_modules/.bin/rollup -c",
     "coveralls": "cat ./coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js",
     "bench": "node benchmark/index.js"
   },
@@ -25,11 +23,6 @@
     "node": ">= 8.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.5.5",
-    "@rollup/plugin-babel": "^5.0.2",
-    "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
     "benchmark": "^2.1.4",
     "bson-objectid": "^1.1.4",
     "chai": "^4.1.2",
@@ -42,9 +35,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "mocha": "^7.2.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.0.5",
-    "rollup": "^2.12.0",
-    "rollup-plugin-terser": "^6.1.0"
+    "prettier": "^2.0.5"
   },
   "dependencies": {
     "setimmediate": "^1.0.5"
