--- a/package.json
+++ b/package.json
@@ -26,19 +26,18 @@
     "benchmark": "^2.1.4",
     "bson-objectid": "^1.1.4",
     "chai": "^4.1.2",
-    "coveralls": "^3.0.11",
+    "coveralls": "^3.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsdoc": "^22.1.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "mocha": "^7.1.1",
-    "nyc": "^15.0.0",
-    "prettier": "^2.0.2"
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsdoc": "^26.0.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "mocha": "^7.2.0",
+    "nyc": "^15.1.0",
+    "prettier": "^2.0.5"
   },
   "dependencies": {
-    "30-seconds-of-code": "^1.2.3",
-    "lodash.set": "^4.3.2"
+    "setimmediate": "^1.0.5"
   }
 }
